; Copyright (c) Facebook, Inc. and its affiliates.
;
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.

(library
 (name Looper)
 (public_name infer.Looper)
 (flags
  (:standard -open Core -open IR -open IStdlib -open IStd -open ATDGenerated
    -open IBase -open Absint))
 (libraries core IStdlib ATDGenerated IBase IR Absint z3 ocamlgraph why3)
 (preprocess
  (pps ppx_compare)))