; Copyright (c) Facebook, Inc. and its affiliates.
;
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.

(library
 (name Looper)
 (public_name infer.Looper)
 (flags
  (:standard -open Core -open IR -open IStdlib -open IStd -open ATDGenerated
    -open IBase -open Absint -open BO -open Costlib -open OpenSource))
 (libraries core IStdlib ATDGenerated IBase IR Absint BO Costlib ocamlgraph why3)
 (preprocess
  (pps ppx_compare)))


; (library
;  (name BO)
;  (public_name infer.BO)
;  (flags
;   (:standard -open Core -open OpenSource -open IR -open IStdlib -open IStd
;     -open ATDGenerated -open IBase -open Absint -open Biabduction))
;  (libraries base64 core IStdlib ATDGenerated IBase IR Absint Biabduction)
;  (preprocess
;   (pps ppx_compare)))


;   (library
;  (name Costlib)
;  (public_name infer.Costlib)
;  (flags
;   (:standard -open Core -open OpenSource -open IR -open IStdlib -open IStd
;     -open ATDGenerated -open IBase -open Absint -open BO -open Checkers))
;  (libraries core IStdlib ATDGenerated IBase IR Absint BO Checkers)
;  (preprocess
;   (pps ppx_compare)))